--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_custom"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_custom_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SearchActivity2"></activity>
+        <activity android:name=".activity.SearchActivity"></activity>
         <activity android:name=".activity.MainScreenActivity" />
-        <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.DrinkScreenActivity" />
         <activity
             android:name=".activity.SplashScreenActivity"
